@@ -1,9 +1,10 @@
 Changes in 3.6.1
-2016-MM-DD
+2016-11-30
 
 - Bug fixes / improvements
   - Fix GEOSSTRtree_nearest_r signature and add implementation (#796)
   - Fix --static-clibs and --static-cclibs returns from geos-config
+  - Fix WKB representation of empty polygon (#680).
 
 Changes in 3.6.0
 2016-10-25
